syntax = "proto3";

package booksPackage;

message books {
    int32 id_buku = 1;
    string judul = 2;
    string penulis = 3;
}

message booksList {
    repeated books book = 1;
}

message booksId {
    int32 id_buku = 1;
}



message updatedBooks {
    int32 id_buku = 1;
    string judul = 2;
    string penulis = 3;
}

message empty {}

service newService {
    rpc addBooks (books) returns (books) {}
    rpc getBooks (empty) returns (booksList) {}
    rpc deleteBooks (booksId) returns (empty) {}
    rpc updateBooks (updatedBooks) returns (books) {}
}